# SEL

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_OPTIMIZATION.md  AI_PROMPTS_FOR_REMAINING_FIXES.md  BEFORE_AFTER_EXAMPLES.md  BUILDING_WINDOWS_EXE.md  CLAUDE.md  COMPREHENSIVE_SANITIZATION_DEPLOYMENT.md  DEPLOYMENT_GUIDE_PROMPTS_V2.md  Dockerfile  ENCODER_SECURITY_FIX.md  HUMAN_INTERACTION_OVERHAUL.md  HUMAN_INTERACTION_QUICKSTART.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LOCALAI_SETUP.md  OPTIMIZATION_SUMMARY.md  PROMPTS_V2_QUICK_REFERENCE.md  README.md  SANDBOXED_DEPLOYMENT.md  SCAFFOLDING_ANALYSIS.md  SECURITY.md  SECURITY_AUDIT_RESPONSE.md  SWARMUI_SETUP.md  TMUX_CONTROL_SETUP.md  WINDOWS_COMPATIBILITY_SUMMARY.md  WINDOWS_DOCKER_DEPLOYMENT.md  WINDOWS_FILES_SUMMARY.txt  WINDOWS_IMPLEMENTATION.md  WINDOWS_INSTALL.md  WINDOWS_QUICK_REF.md  WINDOWS_README.md  WINDOWS_SECURITY_ENFORCEMENT.md  WINDOWS_SETUP.md  WINDOWS_START_HERE.md  apparmor-profile.txt  browser_helper.py  (+40 more)
agents/: README.md  browser.py  image_gen.py  sel_auto_contextual_media_understanding_tool.py  sel_auto_image_analysis_tool.py  sel_auto_knowledge_graph_builder.py  system_agent.py  weather.py  (+2 more)
project_echo/: .gitignore  Dockerfile  HIM_Spec_v1.1.md  README.md  entrypoint.sh  pyproject.toml  requirements.txt  run_him.py  sel.db  # For local development  setup.sh
project_echo/agents/: context_memory.json  sel_auto_context_correlation_engine.py  sel_auto_contextual_memory_graph_generator.py  sel_auto_sel_adaptive_curiosity_probe.py  sel_auto_sel_adaptive_meta_learning_framework.py  sel_auto_sel_auto_adaptive_narrative_coherence_en.py  sel_auto_sel_auto_adaptive_narrative_inference_en.py  sel_auto_sel_auto_adaptive_pattern_recognition_fi.py  sel_auto_sel_auto_cognitive_divergence_mapper.py  sel_auto_sel_auto_contextual_semantic_drift_track.py  sel_auto_sel_auto_conversational_curiosity_attrac.py  sel_auto_sel_auto_conversational_depth_resonator.py  sel_auto_sel_auto_conversational_nuance_detector.py  sel_auto_sel_auto_conversational_sentiment_integr.py  sel_auto_sel_auto_conversational_sentiment_trajec.py  sel_auto_sel_auto_conversational_temporal_coheren.py  sel_auto_sel_auto_cross_contextual_curiosity_navi.py  sel_auto_sel_auto_cross_contextual_emotional_reso.py  sel_auto_sel_auto_cross_contextual_empathetic_nar.py  sel_auto_sel_auto_cross_contextual_identity_disam.py  sel_auto_sel_auto_cross_contextual_identity_fusio.py  sel_auto_sel_auto_cross_contextual_identity_narra.py  sel_auto_sel_auto_cross_contextual_identity_reson.py  sel_auto_sel_auto_cross_contextual_interaction_in.py  sel_auto_sel_auto_cross_contextual_narrative_brid.py  sel_auto_sel_auto_cross_contextual_narrative_disa.py  sel_auto_sel_auto_cross_contextual_narrative_inte.py  sel_auto_sel_auto_cross_contextual_narrative_weav.py  sel_auto_sel_auto_cross_domain_knowledge_retrieva.py  sel_auto_sel_auto_cross_identity_narrative_integr.py  sel_auto_sel_auto_cross_identity_narrative_sentim.py  sel_auto_sel_auto_cross_identity_uncertainty_clar.py  sel_auto_sel_auto_cross_identity_uncertainty_reso.py  sel_auto_sel_auto_cross_interaction_emotional_res.py  sel_auto_sel_auto_cross_interaction_intent_disamb.py  sel_auto_sel_auto_cross_modal_empathetic_intent_d.py  sel_auto_sel_auto_cross_modal_identity_narrative_.py  sel_auto_sel_auto_cross_modal_identity_resonance_.py  sel_auto_sel_auto_cross_modal_intent_decoder.py  sel_auto_sel_auto_cross_modal_narrative_interpola.py  (+20 more)
project_echo/him/: __init__.py  api.py  models.py  planner.py  rendering.py  simulation.py  storage.py  synapse.py  vector.py
project_echo/him/cli/: __init__.py  render.py  render_tiles.py  server.py  tile_processor.py  vector_ingest.py
project_echo/security/: advanced_payload_detection.py  async_security_fix.py  complete_secure_system.py  comprehensive_sanitization.py  comprehensive_security.py  deployment_config.py  example_usage.py  html_xss_protection.py  pentest_defense_test.py  privacy_example.py  privacy_redaction.py  security_filter_system.py  sel_security_integration.py  test_sel_security.py  user_management_system.py  vector_store_diagnostics.py  vector_store_integrations.py
project_echo/sel_bot/: __init__.py  agent_autonomy.py  agent_cache.py  agents_manager.py  behaviour.py  biological_systems.py  cleanup_users.py  computer_behavior.py  confidence.py  config.py  context.py  discord_client.py  dreaming.py  elevenlabs_client.py  feedback.py  gif_analyzer.py  hormone_analytics.py  hormone_state_manager.py  hormones.py  interoception.py  llm_client.py  llm_client_localai.py  llm_factory.py  main.py  media_utils.py  memory.py  metrics_api.py  model_dataset_export.py  models.py  performance_monitor.py  presence_tracker.py  process_lock.py  prompts.py  prompts_v2.py  prompts_v2_simplified.py  response_cache.py  seal_self_edit.py  self_improvement.py  semantic_encoder.py  state_manager.py  (+2 more)
project_echo/sel_bot/client_modules/: __init__.py  hormone_decay.py  inactivity_tracker.py  text_utils.py
project_echo/tests/: conftest.py  evaluate_scaffolding_effectiveness.py  test_agent_autonomy.py  test_api.py  test_behaviour.py  test_biological_systems.py  test_computer_behavior.py  test_dreaming.py  test_hormone_state_manager.py  test_interoception.py  test_llm_quad_pipeline.py  test_media_utils.py  test_memory_him.py  test_model_dataset_export.py  test_process_lock.py  test_prompt_style_guidance.py  test_prompts_v2_comparison.py  test_seal_self_edit.py  test_simulation.py  test_storage.py  test_synapse.py  test_system_operator_agent.py  test_text_utils.py  test_tile_processor.py  test_vector.py  test_vision_analysis.py
project_echo/tools/: backfill_memories.py  clean_memories.py  gen_oneliner.py
sel_selfbot_rust/: .gitignore  Cargo.toml  README.md  build.bat  build.ps1  selfbot.env.example
sel_selfbot_rust/src/: agents.rs  config.rs  elevenlabs.rs  llm_client.rs  main.rs  presence.rs  prompts.rs  stt.rs  voice.rs
voice_bot/: Cargo.toml  build.ps1
voice_bot/src/: config.rs  hormones.rs  llm_client.rs  main.rs  memory.rs
(+16 files in other folders)
