[project]
name = "sel-discord-bot"
version = "1.0.0"
description = "SEL - Discord bot with personality, memory, and emotions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SEL Contributors"}
]
keywords = ["discord", "bot", "ai", "memory", "personality"]

[project.urls]
Homepage = "https://github.com/yourusername/SEL"
Repository = "https://github.com/yourusername/SEL"
Issues = "https://github.com/yourusername/SEL/issues"

[tool.ruff]
# Set the maximum line length
line-length = 120
target-version = "py311"

# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert used (common in tests)
    "T201",   # print found (we use print for output)
    "S311",   # random used (not cryptographic)
    "B008",   # function call in argument defaults
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "node_modules",
    "target",  # Rust build artifacts
]

[tool.ruff.per-file-ignores]
# Tests can use assert and print
"test_*.py" = ["S101", "T201"]
"**/tests/**/*.py" = ["S101", "T201"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
  | \.eggs
  | \.egg-info
  | \.pytest_cache
  | \.mypy_cache
  | \.ruff_cache
  | target
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, can tighten later
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "discord.*",
    "aiohttp.*",
    "sqlalchemy.*",
    "pydantic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["project_echo/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=project_echo",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["project_echo"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
