[package]
name = "sel-selfbot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord selfbot client (voice temporarily disabled for compatibility)
serenity_self = { version = "0.13", default-features = false, features = ["client", "gateway", "builder", "rustls_backend"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# HTTP client for LLM and HIM APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# SQLite for state persistence (matching Python version)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP/async utilities
bytes = "1.5"
futures = "0.3"

# Audio processing for voice (temporarily disabled)
# symphonia = { version = "0.5", features = ["all"] }
# audiopus = "0.3.0-rc.0"
# rodio = "0.17"

[[bin]]
name = "sel-selfbot"
path = "src/main.rs"
