[package]
name = "voice-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord bot client with voice support
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
songbird = "0.4"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# HTTP client for LLM and HIM APIs
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "voice-bot"
path = "src/main.rs"
